--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,48 @@ img {
 	cursor: pointer;
 }
 
+/* Socials  start */
+
+.socials {
+	display: flex;
+	justify-content: center;
+}
+
+.socials__item:not(:last-child) {
+	margin-right: 10px;
+}
+
+.socials__item {
+	width: 44px;
+	height: 44px;
+}
+
+.socials__link {
+	display: flex;
+	width: 100%;
+	height: 100%;
+	align-items: center;
+	justify-content: center;
+
+	color: var(--primary-icon-color);
+	border-radius: 50%;
+
+	transition: var(--transition-color), var(--transition-background-color);
+}
+
+.socials__icon {
+	fill: currentColor;
+}
+
+.socials__link:hover,
+.socials__link:focus {
+	background-color: var(--accent-color);
+	color: var(--light-text-color);
+}
+
+/* Socials end */
+
+
 /* Common styles end */
 
 /* Header */
@@ -327,23 +369,23 @@ img {
 	padding-top: 0;
 }
 
-.work .title {
+.work__title {
 	margin-bottom: 50px;
 }
 
-.work-list {
+.work__list {
 	display: flex;
 }
 
-.work-items:not(:last-child) {
+.work__item:not(:last-child) {
 	margin-right: 30px;
 }
 
-.work-items {
+.work__item {
 	position: relative;
 }
 
-.work-desc {
+.work__desc {
 	position: absolute;
 	display: flex;
 	justify-content: center;
@@ -366,15 +408,15 @@ img {
 	background-color: var(--secondary-background-color);
 }
 
-.team .title {
+.team__title {
 	margin-bottom: 50px;
 }
 
-.team-list {
+.team__list {
 	display: flex;
 }
 
-.team-item {
+.team__item {
 	margin-right: 30px;
 
 	background-color: var(--main-background-color);
@@ -382,17 +424,17 @@ img {
 	border-radius: 0px 0px 4px 4px;
 }
 
-.team-item:last-child {
+.team__item:last-child {
 	margin: 0;
 }
 
-.team-box {
+.team__box {
 	padding-top: 30px;
 	padding-bottom: 30px;
 }
 
-.team .subtitle,
-.team .desc {
+.team__subtitle,
+.team__position {
 	font-size: 16px;
 	line-height: 1.19;
 
@@ -400,53 +442,18 @@ img {
 	letter-spacing: 0.03em;
 }
 
-.team .subtitle {
+.team__subtitle {
 	margin-bottom: 10px;
 	font-weight: 500;
 }
 
-.team .desc {
+.team__position {
 	margin-bottom: 16px;
 
 	color: var(--desc-text-color);
 }
 
-.team-socials {
-	display: flex;
-	justify-content: center;
-}
 
-.team-socials-item:not(:last-child) {
-	margin-right: 10px;
-}
-
-.team-socials-item {
-	width: 44px;
-	height: 44px;
-}
-
-.team-socials-link {
-	display: flex;
-	width: 100%;
-	height: 100%;
-	align-items: center;
-	justify-content: center;
-
-	color: var(--primary-icon-color);
-	border-radius: 50%;
-
-	transition: var(--transition-color), var(--transition-background-color);
-}
-
-.team-icon {
-	fill: currentColor;
-}
-
-.team-socials-link:hover,
-.team-socials-link:focus {
-	background-color: var(--accent-color);
-	color: var(--light-text-color);
-}
 
 /* Clients */
 
