--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,9 +1,15 @@
 /* Team */
 .team {
+
+    @extend %section;
+
     background-color: var(--secondary-background-color);
 
 
     &__title {
+
+        @include title();
+        
             margin-bottom: 50px;
         }
     
