--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -1,8 +1,14 @@
 /* Work */
 .work {
+    
+    @extend %section;
+
 	padding-top: 0;
 
 	&__title {
+
+    @include title();
+
 		margin-bottom: 50px;
 	}
 
