--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,42 +1,18 @@
 // utils styles
 
-@import "./utils/vars";
-@import "./utils/visually-hidden";
+@import "./utils/module";
 
 
 // base styles
 
-@import  "./base/common";
-@import "./base/reset";
-@import "./base/card-set";
+@import "./base/module";
 
 
 // components styles
 
-@import "./components/container";
-@import "./components/section";
-@import "./components/button";
-@import "./components/title";
-@import "./components/subtitle";
-@import "./components/logo";
-@import "./components/socials";
-@import "./components/contact";
-@import "./components/address";
-@import "./components/close-btn";
-@import "./components/btn-list";
-@import "./components/secondary-btn";
-@import "./components/overlay";
+@import "./components/module";
 
 
 // layouts styles
 
-@import "./layouts/header";
-@import "./layouts/nav";
-@import "./layouts/hero";
-@import "./layouts/benefits";
-@import "./layouts/work";
-@import "./layouts/team";
-@import "./layouts/clients";
-@import "./layouts/footer";
-@import "./layouts/modal-window";
-@import "./layouts/portfolio";
+@import "./layouts/module";
