--- a/sass/components/_subtitle.scss
+++ b/sass/components/_subtitle.scss
@@ -1,6 +1,8 @@
 /* Title */
 
 .subtitle {
+	font-size: var(---primary-font-size);
+	font-weight: 700;
 	line-height: 1.14;
 	letter-spacing: var(--primary-letter-spacing);
 	text-transform: uppercase;
